# QkTraits

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/QkTraits/: PointerTraits.h  StringList.h  StringLiteral.h  TypeList.h  TypeTraits.h  ValueList.h  ValueTraits.h  View.h
tests/: CMakeLists.txt  PointerTraitsTest.cpp  StringListTest.cpp  StringLiteralTest.cpp  TypeListTest.cpp  TypeTraitsTest.cpp  ValueListTest.cpp  ViewTest.cpp
